# video-stitcher

./: .gitignore  README.md  pyproject.toml
data/: data.csv
video_stitcher/: __main__.py  ffmpeg.py
