[project]
name = "video-stitcher"
version = "0.1.0"
description = ""
authors = [
    {name = "Charles Martin",email = "cpm@charlesmartin.com.au"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click (>=8.2.1,<9.0.0)",
    "pendulum (>=3.1.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
